--- a/packages/wrangler/package.json
+++ b/packages/wrangler/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "wrangler",
+	"name": "@askcodebase/wrangler",
 	"version": "3.15.2",
 	"description": "Command-line interface for all things Cloudflare Workers",
 	"keywords": [
